# vesnaprak

20240219/0/: prog1.py  prog2.py
20240219/1/: prog.py
20240226/0/: Pipfile  prog0.py  prog1.py
20240226/1/: Pipfile  prog.py
20240226/2/: prog.py
20240304/0/: prog.py  prog1.py  prog2.py
20240304/1/: prog.py
20240311/0/: prog.py  prog1.py  prog2.py
20240311/1/: prog.py
20240318/0/: cal2  calnew.patch  client.py  file.orig  file1  procs.patch  srv.py  srv1.py  srv2.py
20240318/1/: client.py  prog.py  srv.py
20240318/1/patchdir/: 0004-Fix-srv.patch
20240325/0/: prog.py
20240325/1/: client.py  prog.py  srv1.py
20240325/1/patchdir/: 0001-Add-client.patch  0002-Add-srv.patch  0003-Fix-client.patch  0005-Add-Pip-files.patch
20240401/0/: .flake8  0.py
20240401/0/basepkg/core/: __main__.py
20240408/1/mood/client/: client.py
20240408/1/source/: conf.py
20240415/0/: wcount.py
20240422/0/: prog.py  server.py  test_prog.py
20240427/0/: Pipfile
20240427/0/potpomo/: dodo.py  wcount.pot
20240427/0/source/: API.rst  index.rst
20240513/0/: MANIFEST.in  Pipfile  dodo.py  pyproject.toml
20240513/0/source/: conf.py  index.rst
20240513/1/: .flake8  1.mood  MANIFEST.in  Pipfile  client_test.py  dodo.py  pyproject.toml  server_test.py  start_server.py
20240513/1/Mood.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
20240513/1/docs/source/: client.rst  conf.py
20240513/1/i18n/po/ru_RU.UTF-8/LC_MESSAGES/: mood.po
20240513/1/mood/common/: __init__.py
20240513/1/mood/server/: __init__.py  __main__.py
(+11 files in other folders)
